--- a/watcher/pom.xml
+++ b/watcher/pom.xml
@@ -39,41 +39,12 @@
 
     <properties>
         <java.version>11</java.version>
-        <hutool.version>4.0.8</hutool.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jasypt.version>1.9.2</jasypt.version>
         <lombok.version>1.18.12</lombok.version>
-        <springfox.version>2.6.1</springfox.version>
-        <mybatis.starter.version>1.1.1</mybatis.starter.version>
-        <mysql.version>8.0.11</mysql.version>
-        <druid.version>1.0.29</druid.version>
         <commons-lang3.version>3.3.2</commons-lang3.version>
-        <guava.version>[30.1.1-jre,)</guava.version>
-        <commons-collections4.version>4.1</commons-collections4.version>
-        <reactor-spring.version>1.0.1.RELEASE</reactor-spring.version>
-        <disruptor.version>3.4.0</disruptor.version>
-        <hessian.version>4.0.38</hessian.version>
-        <protostuff.version>1.0.8</protostuff.version>
-        <kryo.version>4.0.0</kryo.version>
-        <pagehelper.version>5.1.2</pagehelper.version>
-        <alibaba.dubbo.version>2.6.5</alibaba.dubbo.version>
-        <apache.dubbo.version>2.7.5</apache.dubbo.version>
+        <guava.version>31.0.1-jre</guava.version>
         <gson.version>2.8.0</gson.version>
-        <mapstruct.version>1.3.1.Final</mapstruct.version>
-        <prometheus-java-client.version>0.10.0</prometheus-java-client.version>
-        <prometheus-jmx.version>0.15.0</prometheus-jmx.version>
-        <swagger.version>2.9.2</swagger.version>
-        <sofa.rpc.version>5.7.6</sofa.rpc.version>
-        <tars.version>1.7.2</tars.version>
         <skipTests>false</skipTests>
-        <undertow.version>2.2.2.Final</undertow.version>
-        <curator-test.version>3.3.0</curator-test.version>
-        <wiremock.version>2.18.0</wiremock.version>
-        <zookeeper.version>3.5.6</zookeeper.version>
-        <zkclient.version>0.10</zkclient.version>
-        <shiro.version>1.7.0</shiro.version>
-        <jwt.version>3.12.0</jwt.version>
-        <motan.version>1.1.9</motan.version>
         <!--maven plugin version-->
         <exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
         <apache-rat-plugin.version>0.12</apache-rat-plugin.version>
@@ -89,232 +60,29 @@
         <maven-checkstyle-plugin.version>3.1.0</maven-checkstyle-plugin.version>
         <frontend-maven-plugin.version>1.6</frontend-maven-plugin.version>
         <frontend-maven-plugin.node.version>v12.14.1</frontend-maven-plugin.node.version>
-        <java-websocket.version>1.5.0</java-websocket.version>
-        <mockito.version>3.5.15</mockito.version>
-        <nacos-client.version>1.2.1</nacos-client.version>
-        <groovy.version>2.5.14</groovy.version>
-        <quantitative.version>4.0.0</quantitative.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
-
-            <dependency>
-                <groupId>com.weibo</groupId>
-                <artifactId>motan-core</artifactId>
-                <version>${motan.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.weibo</groupId>
-                <artifactId>motan-transport-netty4</artifactId>
-                <version>${motan.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.weibo</groupId>
-                <artifactId>motan-registry-zookeeper</artifactId>
-                <version>${motan.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.weibo</groupId>
-                <artifactId>motan-springsupport</artifactId>
-                <version>${motan.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.mapstruct</groupId>
-                <artifactId>mapstruct-processor</artifactId>
-                <version>${mapstruct.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.mapstruct</groupId>
-                <artifactId>mapstruct</artifactId>
-                <version>${mapstruct.version}</version>
-            </dependency>
-
-            <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
             <dependency>
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
                 <version>${gson.version}</version>
             </dependency>
-
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
             </dependency>
-
-            <dependency>
-                <groupId>io.prometheus</groupId>
-                <artifactId>simpleclient</artifactId>
-                <version>${prometheus-java-client.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>io.prometheus</groupId>
-                <artifactId>simpleclient_httpserver</artifactId>
-                <version>${prometheus-java-client.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>io.prometheus</groupId>
-                <artifactId>simpleclient_hotspot</artifactId>
-                <version>${prometheus-java-client.version}</version>
-            </dependency>
-
-            <!-- https://mvnrepository.com/artifact/io.prometheus.jmx/collector -->
-            <dependency>
-                <groupId>io.prometheus.jmx</groupId>
-                <artifactId>collector</artifactId>
-                <version>${prometheus-jmx.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.apache.dubbo</groupId>
-                <artifactId>dubbo</artifactId>
-                <version>${apache.dubbo.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.alipay.sofa</groupId>
-                <artifactId>sofa-rpc-all</artifactId>
-                <version>${sofa.rpc.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.alibaba</groupId>
-                <artifactId>dubbo</artifactId>
-                <version>${alibaba.dubbo.version}</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>commons-logging</groupId>
-                        <artifactId>commons-logging</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>org.springframework</groupId>
-                        <artifactId>spring</artifactId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
-
-            <dependency>
-                <groupId>com.lmax</groupId>
-                <artifactId>disruptor</artifactId>
-                <version>${disruptor.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.mybatis.spring.boot</groupId>
-                <artifactId>mybatis-spring-boot-starter</artifactId>
-                <version>${mybatis.starter.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>mysql</groupId>
-                <artifactId>mysql-connector-java</artifactId>
-                <version>${mysql.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.alibaba</groupId>
-                <artifactId>druid</artifactId>
-                <version>${druid.version}</version>
-            </dependency>
-
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
                 <version>${commons-lang3.version}</version>
             </dependency>
-
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.apache.commons</groupId>
-                <artifactId>commons-collections4</artifactId>
-                <version>${commons-collections4.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.projectreactor</groupId>
-                <artifactId>reactor-spring</artifactId>
-                <version>${reactor-spring.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.caucho</groupId>
-                <artifactId>hessian</artifactId>
-                <version>${hessian.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.esotericsoftware</groupId>
-                <artifactId>kryo-shaded</artifactId>
-                <version>${kryo.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.dyuproject.protostuff</groupId>
-                <artifactId>protostuff-core</artifactId>
-                <version>${protostuff.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.dyuproject.protostuff</groupId>
-                <artifactId>protostuff-runtime</artifactId>
-                <version>${protostuff.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.apache.zookeeper</groupId>
-                <artifactId>zookeeper</artifactId>
-                <version>${zookeeper.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.101tec</groupId>
-                <artifactId>zkclient</artifactId>
-                <version>${zkclient.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.github.pagehelper</groupId>
-                <artifactId>pagehelper</artifactId>
-                <version>${pagehelper.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>io.springfox</groupId>
-                <artifactId>springfox-swagger2</artifactId>
-                <version>${swagger.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>io.springfox</groupId>
-                <artifactId>springfox-swagger-ui</artifactId>
-                <version>${swagger.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.tencent.tars</groupId>
-                <artifactId>tars-spring-boot-starter</artifactId>
-                <version>${tars.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.alibaba.nacos</groupId>
-                <artifactId>nacos-client</artifactId>
-                <version>${nacos-client.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.codehaus.groovy</groupId>
-                <artifactId>groovy</artifactId>
-                <version>${groovy.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -341,23 +109,6 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-library</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>${mockito.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-inline</artifactId>
-            <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
