--- a/watcher/watcher-core/Jenkinsfile
+++ b/watcher/watcher-core/Jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
     }
     stage('Deploy Snapshot') {
       steps {
-        dir('watcher-core') {
+        dir('watcher/watcher-core') {
             container('maven-jdk11') {
                 sh 'mvn -DskipTests -Drat.skip=true clean deploy'
             }
