[dev]一个watcher支持多条链的扫描

--- a/watcher/watcher-bootstrap/Jenkinsfile
+++ b/watcher/watcher-bootstrap/Jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
     }
     stage('build') {
       steps {
-        dir('watcher-bootstrap') {
+        dir('watcher/watcher-bootstrap') {
             container('maven-jdk11') {
                 sh 'mvn -version'
                 sh 'mvn -DskipTests -Drat.skip=true clean package'
