--- a/watcher/watcher-plugin/watcher-plugin-evm/pom.xml
+++ b/watcher/watcher-plugin/watcher-plugin-evm/pom.xml
@@ -26,7 +26,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>watcher-plugin-erc20</artifactId>
+    <artifactId>watcher-plugin-evm</artifactId>
 
     <dependencies>
         <dependency>
