--- a/watcher/watcher-bootstrap/pom.xml
+++ b/watcher/watcher-bootstrap/pom.xml
@@ -57,7 +57,7 @@
 
         <dependency>
             <groupId>ai.everylink.chainscan</groupId>
-            <artifactId>watcher-plugin-erc20</artifactId>
+            <artifactId>watcher-plugin-evm</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
