--- a/watcher/watcher-plugin/watcher-plugin-evm/Jenkinsfile
+++ b/watcher/watcher-plugin/watcher-plugin-evm/Jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
     }
     stage('Deploy Snapshot') {
       steps {
-        dir('watcher-plugin-erc20') {
+        dir('watcher/watcher-plugin/watcher-plugin-evm') {
             container('maven-jdk11') {
                 sh 'mvn -DskipTests -Drat.skip=true clean deploy'
             }
