[test]部署问题排查

--- a/watcher/watcher-bootstrap/Jenkinsfile
+++ b/watcher/watcher-bootstrap/Jenkinsfile
@@ -22,6 +22,7 @@ pipeline {
             container('maven-jdk11') {
                 sh 'mvn -version'
                 sh 'mvn -version'
+                sh 'mvn clean'
                 sh 'mvn -DskipTests -Drat.skip=true clean package'
                 withCredentials([usernamePassword(passwordVariable : 'DOCKER_PASSWORD' ,credentialsId : 'dockerhub' ,usernameVariable : 'DOCKER_USERNAME' ,)]) {
                     sh 'echo "$DOCKER_PASSWORD" | docker login $REGISTRY -u "$DOCKER_USERNAME" --password-stdin'
