[dev]本地JPA加载问题修复

--- a/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application-dev.properties
+++ b/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application-dev.properties
@@ -1,8 +1,7 @@
 
 spring.jpa.show-sql=true
-spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
 # separated by comma?like url1,url2
 evm.chain.urls=http://rinkeby.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
