--- a/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application-prd.properties
+++ b/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application-prd.properties
@@ -2,11 +2,11 @@ spring.datasource.url=jdbc:mysql://exchange-mysql5-7.database.svc.cluster.local:
 spring.datasource.username=root
 spring.datasource.password=ZxcvAsdf
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
 spring.jpa.show-sql=false
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
 # separated by comma?like url1,url2
 evm.chain.urls=http://rinkeby.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
