--- a/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application.properties
+++ b/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application.properties
@@ -2,11 +2,12 @@ spring.datasource.url=jdbc:mysql://localhost:3306/chainscan?characterEncoding=ut
 spring.datasource.username=root
 spring.datasource.password=Mycup2022
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
+
 
 # separated by comma?like url1,url2
 evm.chain.urls=http://rinkeby.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
