[dev]扫块代码优化

--- a/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application-test.properties
+++ b/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application-test.properties
@@ -9,8 +9,8 @@ spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
 
 
-# separated by comma?like url1,url2
-evm.chain.urls=http://rinkeby.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
-
+# rinkeby watcher scan url
+evm.chain.rinkebyStep=5
+evm.chain.rinkebyChainId=4
 evm.chain.rinkebyUrl=http://rinkeby.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
 evm.chain.rinkebyRpcSecret=c111f8f97ab74642bdcdfa0d27cd96f7
