--- a/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application-dev.properties
+++ b/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application-dev.properties
@@ -5,6 +5,7 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
 # rinkeby watcher scan url
 evm.chain.rinkebyStep=5
-evm.chain.rinkebyChainId=4
-evm.chain.rinkebyUrl=http://rinkeby.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
-evm.chain.rinkebyRpcSecret=c111f8f97ab74642bdcdfa0d27cd96f7
+evm.chain.rinkebyChainId=97
+#evm.chain.rinkebyUrl=http://rinkeby.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
+evm.chain.rinkebyUrl=https://vmtest.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
+#evm.chain.rinkebyRpcSecret=c111f8f97ab74642bdcdfa0d27cd96f7
