--- a/watcher/pom.xml
+++ b/watcher/pom.xml
@@ -100,6 +100,24 @@
                 <artifactId>druid</artifactId>
                 <version>${druid.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.web3j</groupId>
+                <artifactId>core</artifactId>
+                <version>5.0.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>okhttp</artifactId>
+                <version>4.3.1</version>
+                <scope>compile</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>logging-interceptor</artifactId>
+                <version>4.3.1</version>
+                <scope>compile</scope>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -282,60 +300,61 @@
             <!--</executions>-->
             <!--</plugin>-->
 
-            <plugin>
-                <groupId>org.apache.rat</groupId>
-                <artifactId>apache-rat-plugin</artifactId>
-                <version>${apache-rat-plugin.version}</version>
-                <configuration>
-                    <excludes>
-                        <exclude>**/target/**</exclude>
-                        <exclude>**/logs/**</exclude>
-                        <exclude>**/*.log</exclude>
-                        <exclude>**/*.tar.gz</exclude>
-                        <exclude>**/spring.factories</exclude>
-                        <exclude>**/spring.provides</exclude>
-                        <exclude>/script/**</exclude>
-                        <exclude>**/lombok.config</exclude>
-                        <exclude>**/*.json</exclude>
-                        <!-- IDE files -->
-                        <exclude>**/*.iml</exclude>
-                        <exclude>**/.idea/**</exclude>
-                        <exclude>**/*.classpath</exclude>
-                        <exclude>**/.project</exclude>
-                        <exclude>**/.settings/**</exclude>
-                        <exclude>**/dependency-reduced-pom.xml</exclude>
-                        <!-- git files -->
-                        <exclude>**/.gitignore</exclude>
-                        <exclude>**/.gitmodules</exclude>
-                        <exclude>**/.git/**</exclude>
-                        <!-- CI files -->
-                        <exclude>**/.travis.yml</exclude>
-                        <exclude>**/.codecov.yml</exclude>
-                        <exclude>**/.mvn/jvm.config</exclude>
-                        <exclude>**/.mvn/wrapper/maven-wrapper.properties</exclude>
-                        <!-- GitHub files -->
-                        <exclude>**/.github/**</exclude>
-                        <!-- document files -->
-                        <exclude>**/*.md</exclude>
-                        <excldue>**/*.MD</excldue>
-                        <excldue>**/*.conf</excldue>
-                        <excldue>**/*.tars</excldue>
-                        <exclude>**/*.txt</exclude>
-                        <exclude>**/docs/**</exclude>
-                        <!-- UI files -->
-                        <exclude>/openapi-dashboard/**</exclude>
-                        <exclude>**/resources/static/</exclude>
-                    </excludes>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.apache.rat</groupId>-->
+<!--                <artifactId>apache-rat-plugin</artifactId>-->
+<!--                <version>${apache-rat-plugin.version}</version>-->
+<!--                <configuration>-->
+<!--                    <excludes>-->
+<!--                        <exclude>**/target/**</exclude>-->
+<!--                        <exclude>**/logs/**</exclude>-->
+<!--                        <exclude>**/*.log</exclude>-->
+<!--                        <exclude>**/*.tar.gz</exclude>-->
+<!--                        <exclude>**/spring.factories</exclude>-->
+<!--                        <exclude>**/spring.provides</exclude>-->
+<!--                        <exclude>/script/**</exclude>-->
+<!--                        <exclude>**/lombok.config</exclude>-->
+<!--                        <exclude>**/*.json</exclude>-->
+<!--                        &lt;!&ndash; IDE files &ndash;&gt;-->
+<!--                        <exclude>**/*.iml</exclude>-->
+<!--                        <exclude>**/.idea/**</exclude>-->
+<!--                        <exclude>**/*.classpath</exclude>-->
+<!--                        <exclude>**/.project</exclude>-->
+<!--                        <exclude>**/.settings/**</exclude>-->
+<!--                        <exclude>**/dependency-reduced-pom.xml</exclude>-->
+<!--                        &lt;!&ndash; git files &ndash;&gt;-->
+<!--                        <exclude>**/.gitignore</exclude>-->
+<!--                        <exclude>**/.gitmodules</exclude>-->
+<!--                        <exclude>**/.git/**</exclude>-->
+<!--                        &lt;!&ndash; CI files &ndash;&gt;-->
+<!--                        <exclude>**/.travis.yml</exclude>-->
+<!--                        <exclude>**/.codecov.yml</exclude>-->
+<!--                        <exclude>**/.mvn/jvm.config</exclude>-->
+<!--                        <exclude>**/.mvn/wrapper/maven-wrapper.properties</exclude>-->
+<!--                        &lt;!&ndash; GitHub files &ndash;&gt;-->
+<!--                        <exclude>**/.github/**</exclude>-->
+<!--                        &lt;!&ndash; document files &ndash;&gt;-->
+<!--                        <exclude>**/*.md</exclude>-->
+<!--                        <excldue>**/*.MD</excldue>-->
+<!--                        <excldue>**/*.conf</excldue>-->
+<!--                        <excldue>**/*.tars</excldue>-->
+<!--                        <exclude>**/*.txt</exclude>-->
+<!--                        <exclude>**/docs/**</exclude>-->
+<!--                        <exclude>Jenkinsfile</exclude>-->
+<!--                        &lt;!&ndash; UI files &ndash;&gt;-->
+<!--                        <exclude>/watcher-plugin-evm/**</exclude>-->
+<!--                        <exclude>**/resources/static/</exclude>-->
+<!--                    </excludes>-->
+<!--                </configuration>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <phase>verify</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>check</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
         </plugins>
     </build>
 </project>
