--- a/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application-prd.properties
+++ b/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application-prd.properties
@@ -12,5 +12,5 @@ spring.jpa.hibernate.ddl-auto=update
 evm.chain.rinkebyStep=5
 evm.chain.rinkebyChainId=97
 #evm.chain.rinkebyUrl=http://rinkeby.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
-evm.chain.rinkebyUrl=https://vmtest.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
+evm.chain.rinkebyUrl=http://vmtest.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
 #evm.chain.rinkebyRpcSecret=c111f8f97ab74642bdcdfa0d27cd96f7
