[dev]账户余额代码删掉

--- a/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application-test.properties
+++ b/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application-test.properties
@@ -14,4 +14,4 @@ evm.chain.rinkebyStep=5
 evm.chain.rinkebyChainId=97
 #evm.chain.rinkebyUrl=http://rinkeby.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
 evm.chain.rinkebyUrl=http://vmtest.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
-#evm.chain.rinkebyRpcSecret=c111f8f97ab74642bdcdfa0d27cd96f7
+evm.chain.rinkebyRpcSecret=c111f8f97ab74642bdcdfa0d27cd96f7
