--- a/watcher/watcher-plugin/watcher-plugin-summary/pom.xml
+++ b/watcher/watcher-plugin/watcher-plugin-summary/pom.xml
@@ -20,18 +20,26 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>watcher</artifactId>
+        <artifactId>watcher-plugin</artifactId>
         <groupId>ai.everylink.chainscan</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>watcher-plugin</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>watcher-plugin-summary</artifactId>
 
-    <modules>
-        <module>watcher-plugin-evm</module>
-        <module>watcher-plugin-summary</module>
-    </modules>
+    <dependencies>
+        <dependency>
+            <groupId>ai.everylink.chainscan</groupId>
+            <artifactId>watcher-core</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
+
+    </dependencies>
 </project>
