--- a/watcher/watcher-bootstrap/src/main/resources/application-prd.yml
+++ b/watcher/watcher-bootstrap/src/main/resources/application-prd.yml
@@ -39,5 +39,4 @@ logging:
 
 cion:
   chainIds: "1,99"
-  web3Urls: "http://rinkeby.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf,http://vmtest.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf"
-
+  web3Urls: "https://mainnet.infura.io/v3/72f3a83ea86b41b191264bd16cbac2bf,http://vmtest.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf"
