--- a/watcher/watcher-plugin/watcher-plugin-summary/src/main/resources/application-dev.properties
+++ b/watcher/watcher-plugin/watcher-plugin-summary/src/main/resources/application-dev.properties
@@ -1,4 +1,9 @@
+spring.datasource.url=jdbc:mysql://exchange-mysql5-7.database.svc.cluster.local:3306/chainscan?characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=ZxcvAsdf
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
