--- a/watcher/watcher-plugin/watcher-plugin-evm/pom.xml
+++ b/watcher/watcher-plugin/watcher-plugin-evm/pom.xml
@@ -39,6 +39,16 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.13</version>
+        </dependency>
+        <dependency>
+            <groupId>org.lz4</groupId>
+            <artifactId>lz4-java</artifactId>
+            <version>1.8.0</version>
+        </dependency>
 
 
     </dependencies>
