--- a/watcher/watcher-bootstrap/src/main/resources/application-local.yml
+++ b/watcher/watcher-bootstrap/src/main/resources/application-local.yml
@@ -38,6 +38,7 @@ logging:
         ai.everylink.openapi: info
 
 cion:
+  coinNams: "MOBI option,MOBI"
   chainIds: "1,97"
   web3Urls: "https://mainnet.infura.io/v3/72f3a83ea86b41b191264bd16cbac2bf,http://vmtest.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf"
 evm:
