MOBIk奖励池数据统计；

--- a/watcher/watcher-bootstrap/src/main/resources/application-local.yml
+++ b/watcher/watcher-bootstrap/src/main/resources/application-local.yml
@@ -40,6 +40,7 @@ logging:
 cion:
   lockCoinNams: "MOBI option,MOBI"
   burntCoinNams: "MOBI"
+  rewardCoinNams: "MOBI"
   chainIds: "4,97"
   web3Urls: "https://mainnet.infura.io/v3/72f3a83ea86b41b191264bd16cbac2bf,http://10.233.65.245:9934"
 evm:
