--- a/watcher/watcher-bootstrap/src/main/resources/application-prd.yml
+++ b/watcher/watcher-bootstrap/src/main/resources/application-prd.yml
@@ -38,6 +38,8 @@ logging:
         ai.everylink.openapi: info
 
 cion:
-  coinNams: "MOBI option,MOBI"
+  lockCoinNams: "MOBI option,MOBI"
+  burntCoinNams: "MOBI"
+  rewardCoinNams: "MOBI"
   chainIds: "1,99"
   web3Urls: "https://mainnet.infura.io/v3/72f3a83ea86b41b191264bd16cbac2bf,http://vmtest.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf"
