--- a/watcher/watcher-bootstrap/pom.xml
+++ b/watcher/watcher-bootstrap/pom.xml
@@ -50,6 +50,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.6</version>
+        </dependency>
+
+        <dependency>
             <groupId>ai.everylink.chainscan</groupId>
             <artifactId>watcher-core</artifactId>
             <version>1.0.0-SNAPSHOT</version>
