--- a/watcher/watcher-bootstrap/src/main/resources/application-local.yml
+++ b/watcher/watcher-bootstrap/src/main/resources/application-local.yml
@@ -38,10 +38,15 @@ logging:
         ai.everylink.openapi: info
 
 cion:
-  lockCoinNams: "MOBI option,MOBI"
+  lockCoinNams: "MOBI option,MOBI,VMT"
   burntCoinNams: "MOBI"
   rewardCoinNams: "MOBI"
   chainIds: "4,97"
-  web3Urls: "https://mainnet.infura.io/v3/72f3a83ea86b41b191264bd16cbac2bf,http://10.233.65.245:9934"
+  web3Urls: "http://rinkeby.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf,http://10.233.65.245:9934"
 evm:
   vmChainUrl: http://vmtest.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
+cinfigMap:
+  mobiUrl: http://xapi.powx.io
+  rinkebyUrl: http://rinkeby.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
+etherScanApi:
+  key: RAWVEBW2RS6EEETNQ83ASVE972E415G5C3
