--- a/watcher/watcher-plugin/watcher-plugin-summary/pom.xml
+++ b/watcher/watcher-plugin/watcher-plugin-summary/pom.xml
@@ -39,7 +39,10 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>com.github.goodforgod</groupId>
+            <artifactId>java-etherscan-api</artifactId>
+        </dependency>
 
     </dependencies>
 </project>
