wallet_rpc代码迁移提交

--- a/watcher/watcher-plugin/pom.xml
+++ b/watcher/watcher-plugin/pom.xml
@@ -32,6 +32,7 @@
     <modules>
         <module>watcher-plugin-evm</module>
         <module>watcher-plugin-summary</module>
+        <module>watcher-plugin-incentive</module>
     </modules>
 
 </project>
