--- a/watcher/watcher-bootstrap/pom.xml
+++ b/watcher/watcher-bootstrap/pom.xml
@@ -65,6 +65,11 @@
             <artifactId>watcher-plugin-summary</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>ai.everylink.chainscan</groupId>
+            <artifactId>watcher-plugin-incentive</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 
