--- a/watcher/watcher-dao/pom.xml
+++ b/watcher/watcher-dao/pom.xml
@@ -25,7 +25,7 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>watcher-core</artifactId>
+    <artifactId>watcher-dao</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
     <dependencies>
@@ -119,66 +119,6 @@
             <groupId>org.lz4</groupId>
             <artifactId>lz4-java</artifactId>
             <version>1.8.0</version>
-        </dependency>
-        <dependency>
-            <groupId>io.emeraldpay.polkaj</groupId>
-            <artifactId>polkaj-common-types</artifactId>
-            <version>0.3.0</version>
-        </dependency>
-        <dependency>
-            <groupId>io.emeraldpay.polkaj</groupId>
-            <artifactId>polkaj-api-base</artifactId>
-            <version>0.5.0</version>
-        </dependency>
-        <dependency>
-            <groupId>io.emeraldpay.polkaj</groupId>
-            <artifactId>polkaj-api-http</artifactId>
-            <version>0.5.0</version>
-        </dependency>
-        <dependency>
-            <groupId>io.emeraldpay.polkaj</groupId>
-            <artifactId>polkaj-json-types</artifactId>
-            <version>0.5.0</version>
-        </dependency>
-        <dependency>
-            <groupId>io.emeraldpay.polkaj</groupId>
-            <artifactId>polkaj-scale</artifactId>
-            <version>0.5.0</version>
-        </dependency>
-        <dependency>
-            <groupId>io.emeraldpay.polkaj</groupId>
-            <artifactId>polkaj-api-http</artifactId>
-            <version>0.5.0</version>
-        </dependency>
-        <dependency>
-            <groupId>io.emeraldpay.polkaj</groupId>
-            <artifactId>polkaj-api-ws</artifactId>
-            <version>0.5.0</version>
-        </dependency>
-        <dependency>
-            <groupId>io.emeraldpay.polkaj</groupId>
-            <artifactId>polkaj-schnorrkel</artifactId>
-            <version>0.5.0</version>
-        </dependency>
-        <dependency>
-            <groupId>io.emeraldpay.polkaj</groupId>
-            <artifactId>polkaj-api-ws</artifactId>
-            <version>0.5.0</version>
-        </dependency>
-        <dependency>
-            <groupId>io.emeraldpay.polkaj</groupId>
-            <artifactId>polkaj-ss58</artifactId>
-            <version>0.5.0</version>
-        </dependency>
-        <dependency>
-            <groupId>io.emeraldpay.polkaj</groupId>
-            <artifactId>polkaj-scale-types</artifactId>
-            <version>0.5.0</version>
-        </dependency>
-        <dependency>
-            <groupId>io.emeraldpay.polkaj</groupId>
-            <artifactId>polkaj-tx</artifactId>
-            <version>0.5.0</version>
         </dependency>
     </dependencies>
 </project>
