--- a/watcher/watcher-plugin/watcher-plugin-evm/pom.xml
+++ b/watcher/watcher-plugin/watcher-plugin-evm/pom.xml
@@ -34,6 +34,11 @@
             <artifactId>watcher-core</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>ai.everylink.chainscan</groupId>
+            <artifactId>watcher-dao</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -44,12 +49,5 @@
             <artifactId>commons-codec</artifactId>
             <version>1.13</version>
         </dependency>
-        <dependency>
-            <groupId>org.lz4</groupId>
-            <artifactId>lz4-java</artifactId>
-            <version>1.8.0</version>
-        </dependency>
-
-
     </dependencies>
 </project>
