--- a/watcher/watcher-plugin/watcher-plugin-summary/pom.xml
+++ b/watcher/watcher-plugin/watcher-plugin-summary/pom.xml
@@ -34,6 +34,11 @@
             <artifactId>watcher-core</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>ai.everylink.chainscan</groupId>
+            <artifactId>watcher-dao</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
