L1质押数据解析；

--- a/watcher/watcher-bootstrap/src/main/resources/application-test.yml
+++ b/watcher/watcher-bootstrap/src/main/resources/application-test.yml
@@ -37,6 +37,7 @@ logging:
         ai.everylink.openapi.lottery: info
         ai.everylink.openapi: info
 cion:
+  L1Symbol: "VMT"
   lockCoinNams: "MOBI option,MOBI,VMT"
   burntCoinNams: "MOBI"
   rewardCoinNams: "MOBI"
