--- a/watcher/watcher-bootstrap/src/main/resources/application-test.yml
+++ b/watcher/watcher-bootstrap/src/main/resources/application-test.yml
@@ -41,6 +41,7 @@ cion:
   lockCoinNams: "MOBI option,MOBI,VMT"
   burntCoinNams: "MOBI"
   rewardCoinNams: "MOBI"
+  pendingRewardCion: "MOBI"
   chainIds: "4,97"
   web3Urls: "https://mainnet.infura.io/v3/72f3a83ea86b41b191264bd16cbac2bf,http://vmtest.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf"
 cinfigMap:
