--- a/watcher/vmchain-watcher-node/Dockerfile
+++ b/watcher/vmchain-watcher-node/Dockerfile
@@ -6,8 +6,7 @@ RUN ls
 RUN npm cache clean --force
 RUN npm config set registry https://registry.npm.taobao.org
 RUN yarn add @polkadot/api@5.8.3
-RUN yarn add zksync@0.11.1
-RUN yarn add ethers
+RUN yarn add ethers@5.5.3
 RUN yarn add web3
 RUN npm install
 
