--- a/watcher/vmchain-watcher-node/deploy/production/deployment.yaml
+++ b/watcher/vmchain-watcher-node/deploy/production/deployment.yaml
@@ -21,7 +21,7 @@ spec:
           mountPath: /etc/localtime
         imagePullPolicy: IfNotPresent
         ports:
-        - containerPort: 7010
+        - containerPort: 7011
         env:
           - name: CDN_HOST
             valueFrom:
@@ -57,11 +57,11 @@ spec:
                 key: db-name
         resources:
           requests:
-            cpu: 0.1
-            memory: 0.1Gi
+            cpu: 100m
+            memory: 1Gi
           limits:
-            cpu: 1
-            memory: 0.5Gi
+            cpu: '2'
+            memory: 4Gi
       volumes:
       - name: host-time
         hostPath:
