--- a/watcher/vmchain-watcher-node/deploy/sandbox/deployment.yaml
+++ b/watcher/vmchain-watcher-node/deploy/sandbox/deployment.yaml
@@ -20,16 +20,40 @@ spec:
         - name: host-time
           mountPath: /etc/localtime
         imagePullPolicy: IfNotPresent
-        command: ["/bin/sh", "-c", "--"]
-        args: ["while true; do npm run start; sleep 30; done;"]
         ports:
         - containerPort: 7011
         env:
-          - name: CHAIN_WS_ENDPOINT
+          - name: DB_HOST
+            valueFrom:
+              secretKeyRef:
+                name: database-contribution
+                key: database-host
+          - name: DB_PORT
+            valueFrom:
+              secretKeyRef:
+                name: database-contribution
+                key: db-port
+          - name: DB_USERNAME
+            valueFrom:
+              secretKeyRef:
+                name: database-contribution
+                key: username
+          - name: DB_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: database-contribution
+                key: password
+          - name: DB_NAME
+            valueFrom:
+              secretKeyRef:
+                name: database-contribution
+                key: db-name
+          - name: vmWeb3Url
             valueFrom:
               configMapKeyRef:
-                name: chainscan-config
-                key: chain-ws-endpoint
+                name: watcher-contribution-config
+                key: vm-web3-url
+
         resources:
           requests:
             cpu: 100m
