--- a/watcher/vmchain-watcher-node/deploy/sandbox/deployment.yaml
+++ b/watcher/vmchain-watcher-node/deploy/sandbox/deployment.yaml
@@ -27,7 +27,7 @@ spec:
             valueFrom:
               secretKeyRef:
                 name: database-contribution
-                key: database-host
+                key: url
           - name: DB_PORT
             valueFrom:
               secretKeyRef:
