--- a/watcher/vmchain-watcher-node/deploy/sandbox/deployment.yaml
+++ b/watcher/vmchain-watcher-node/deploy/sandbox/deployment.yaml
@@ -28,27 +28,27 @@ spec:
           - name: DB_HOST
             valueFrom:
               secretKeyRef:
-                name: database-contribution
-                key: url
+                name: database-chainscan
+                key: db-host
           - name: DB_PORT
             valueFrom:
               secretKeyRef:
-                name: database-contribution
-                key: port
+                name: database-chainscan
+                key: db-port
           - name: DB_USERNAME
             valueFrom:
               secretKeyRef:
-                name: database-contribution
+                name: database-chainscan
                 key: username
           - name: DB_PASSWORD
             valueFrom:
               secretKeyRef:
-                name: database-contribution
+                name: database-chainscan
                 key: password
           - name: DB_NAME
             valueFrom:
               secretKeyRef:
-                name: database-contribution
+                name: database-chainscan
                 key: db-name
           - name: vmWeb3Url
             valueFrom:
