--- a/watcher/watcher-bootstrap/src/main/resources/application-local.yml
+++ b/watcher/watcher-bootstrap/src/main/resources/application-local.yml
@@ -39,20 +39,20 @@ logging:
 
 cion:
   L1Symbol: "VMT"
-  lockCoinNams: "MOBI option,MOBI,VMT"
-  burntCoinNams: "MOBI"
-  rewardCoinNams: "MOBI"
-  pendingRewardCion: "MOBI"
+  lockCoinNams: "DNA option,DNA,VMT"
+  burntCoinNams: "DNA"
+  rewardCoinNams: "DNA"
+  pendingRewardCion: "DNA"
   distributionReserveUnit: "USDT"
-  stakingReserveUnit: "MOBI"
-  bufferRewardsUnit: "MOBI"
+  stakingReserveUnit: "DNA"
+  bufferRewardsUnit: "DNA"
   chainIds: "4,97"
   web3Urls: "http://rinkeby.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf,http://vmtest.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf"
 evm:
-  vmChainUrl: http://vmtest.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
+  vmChainUrl: http://vmdev.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
 cinfigMap:
   mobiUrl: http://xapi.powx.io
   rinkebyUrl: http://rinkeby.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
-  vmChainUrl: http://vmtest.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
+  vmChainUrl: http://vmdev.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
 etherScanApi:
   key: RAWVEBW2RS6EEETNQ83ASVE972E415G5C3
