--- a/watcher/watcher-bootstrap/deploy/production/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/production/deployment.yaml
@@ -34,7 +34,7 @@ spec:
             memory: 0.5Gi
           limits:
             cpu: 2
-            memory: 1Gi
+            memory: 4Gi
         volumeMounts:
         - name: host-time
           mountPath: /etc/localtime
@@ -46,6 +46,28 @@ spec:
             value: "prd"
           - name: TZ
             value: UTC
+          - name: "evm.chain.rinkebyUrl"
+            value: "https://vmtestnet.chainfra.io/v1/df8371a1d8cbc835147df382bb1144a9"
+          - name: "nacos.config.server-addr"
+            valueFrom:
+              configMapKeyRef:
+                name: nacos-config
+                key: nacos.config.server-addr
+          - name: "spring.datasource.url"
+            valueFrom:
+              secretKeyRef:
+                name: database-watcher
+                key: database-url
+          - name: "spring.datasource.username"
+            valueFrom:
+              secretKeyRef:
+                name: database-watcher
+                key: username
+          - name: "spring.datasource.password"
+            valueFrom:
+              secretKeyRef:
+                name: database-watcher
+                key: password
       volumes:
       - name: host-time
         hostPath:
