--- a/watcher/watcher-bootstrap/src/main/resources/application-local.yml
+++ b/watcher/watcher-bootstrap/src/main/resources/application-local.yml
@@ -37,7 +37,7 @@ logging:
         ai.everylink.openapi.lottery: info
         ai.everylink.openapi: info
 
-cion:
+coin:
   L1Symbol: "VMT"
   lockCoinNams: "DNA option,DNA,VMT"
   burntCoinNams: "DNA"
@@ -47,11 +47,11 @@ cion:
   stakingReserveUnit: "DNA"
   bufferRewardsUnit: "DNA"
   chainIds: "4,97"
-  web3Urls: "http://rinkeby.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf,http://vmtest.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf"
+  web3Urls: "http://rinkeby.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf,http://vmdev.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf"
 evm:
   vmChainUrl: http://vmdev.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
-cinfigMap:
-  mobiUrl: http://xapi.powx.io
+watcher:
+  dnaUrl: http://xapi.powx.io
   rinkebyUrl: http://rinkeby.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
   vmChainUrl: http://vmdev.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
 etherScanApi:
