--- a/watcher/watcher-bootstrap/src/main/resources/application.yml
+++ b/watcher/watcher-bootstrap/src/main/resources/application.yml
@@ -19,7 +19,7 @@ server:
 
 spring:
   profiles:
-    active: local
+    active: test
   main:
     allow-bean-definition-overriding: true
   application:
