--- a/watcher/watcher-bootstrap/src/main/resources/application-local.yml
+++ b/watcher/watcher-bootstrap/src/main/resources/application-local.yml
@@ -38,8 +38,8 @@ logging:
         ai.everylink.openapi: info
 
 coin:
-  L1Symbol: "VMT"
-  lockCoinNams: "DNA option,DNA,VMT"
+  L1Symbol: "DTX"
+  lockCoinNams: "DNA option,DNA,DTX"
   burntCoinNams: "DNA"
   rewardCoinNams: "DNA"
   pendingRewardCion: "DNA"
